# idamesh

./: .gitattributes  .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml
src/idamesh/: __init__.py
tests/application/: test_globals.py
tests/architecture/: test_import_contract.py
tests/discovery/: test_install.py  test_plugin_server.py  test_registry.py
tests/domain/: test_address.py  test_entities.py  test_pagination.py
tests/e2e/: test_mergeback.py  test_supervisor_ncopies.py  test_worker_slice.py
tests/execution/: __init__.py  test_cancellation.py  test_execute_sync.py  test_inline_executor.py
tests/infrastructure/: test_decompiler_adapter.py  test_globals_adapter.py  test_scratch_copy.py  test_strings_cache.py
tests/mcp/: support.py  test_engine.py  test_overflow.py  test_registry.py  test_schema.py
tests/phase2/: test_basic_blocks.py  test_callgraph.py  test_disasm.py  test_export_funcs.py  test_find_bytes.py  test_find_regex.py  test_func_profile.py  test_imports.py  test_int_convert.py  test_list_strings.py  test_lookup_funcs.py  test_memory.py  test_read_struct.py  test_resources_static.py  test_resources_templates1.py  test_resources_templates2.py  test_search_structs.py  test_search_text.py  test_types.py  test_xrefs.py
tests/phase2b/: test_entity_query.py  test_func_query.py  test_imports_query.py  test_insn_query.py  test_xref_query.py
tests/phase3/: test_bookmark_recompile.py  test_code_definition.py  test_make_data.py  test_operand_code.py  test_patch.py  test_rename.py  test_set_comment.py  test_set_type.py  test_stack.py  test_type_decl.py
tests/phase4/: __init__.py  test_analyze_component.py  test_analyze_function.py  test_dangerous_callers.py  test_data_flow.py  test_detect_vulns.py  test_find_crypto.py  test_stack_strings.py  test_survey.py  test_taint.py
(+360 files in other folders)
